Fix alignment on card-horizontal, move padding to card-row, update docs

--- a/src/scss/lr7-bootstrap-theme/_variables.scss
+++ b/src/scss/lr7-bootstrap-theme/_variables.scss
@@ -204,7 +204,7 @@ $radio-hover-border: $radio-hover-color;
 
 // Cards
 $card-border-radius: 10px;
-$card-box-shadow: 0 1px 3px -1px rgba(0, 0, 0, 0.5);
+$card-box-shadow: 0 1px 3px -1px rgba(0, 0, 0, 0.9);
 
 //== Dropdowns
 $dropdown-box-shadow: 0 0 2px 1px rgba(0, 0, 0, 0.1);
